test_scripts/errors/anon_fn_body_error.shm
let f = fn() { undefined_var; };
f();
