test_scripts/errors/anon_fn_body_error.stderr
 1 | let f = fn() { undefined_var; };
                    ^^^^^^^^^^^^^
 2 | f();
Error: Unknown identifier "undefined_var"
